[package]
name = "tunet-model"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
netstatus = { workspace = true }
futures-util = { workspace = true }
compio = { workspace = true, features = ["time"] }
winio-elm = { workspace = true }
anyhow = { workspace = true }
drop_guard = "0.3"
async-once-cell = "0.5"
