[package]
name = "tunet-native"
version = "0.2.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tunet-rust = { path = "../tunet-rust" }
lazy_static = "1.4"

[dependencies.reqwest]
version = "0.10"
features = ["cookies"]
