[package]
name = "tunet-native"
version = "0.2.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tunet-rust = { path = "../tunet-rust" }
lazy_static = "1.4"
libc = "0.2"

[dependencies.reqwest]
version = "0.11"
features = ["cookies"]
