[package]
name = "tunet-rust"
version = "0.7.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
authtea = { path = "../authtea" }
netstatus = { path = "../netstatus", optional = true }
ureq = { version = "2.1", features = [ "cookies", "charset" ] }
crypto2 = "0.1"
hex = "0.4"
radix64 = "0.6"
serde_json = "1.0"
select = "0.5"
chrono = "0.4"
mac_address = "1.1"
lazy_static = "1.4"
regex = "1"
thiserror = "1.0"
