[package]
name = "tunet-rust"
version = "0.7.3"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
authtea = { path = "../authtea" }
netstatus = { path = "../netstatus", optional = true }
ureq = { version = "2.1", features = [ "cookies", "charset" ] }
url = "2.2"
md-5 = "0.9"
sha-1 = "0.9"
hmac = "0.10"
data-encoding = "2.3"
data-encoding-macro = "0.1"
serde_json = "1.0"
select = "0.5"
chrono = { version = "0.4", default-features = false, features = [ "clock", "std" ] }
mac_address = "1.1"
lazy_static = "1.4"
regex = "1"
thiserror = "1.0"
