[package]
name = "tunet-rust"
version = "0.9.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
authtea = { path = "../authtea" }
netstatus = { path = "../netstatus", optional = true }
async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"
url = "2.2"
md-5 = "0.9"
sha-1 = "0.9"
hmac = "0.11"
data-encoding = "2.3"
data-encoding-macro = "0.1"
serde = { version = "1.0", optional = true }
serde_json = "1.0"
select = "0.5"
chrono = { version = "0.4", default-features = false, features = [ "clock", "std" ] }
mac_address = "1.1"
lazy_static = "1.4"
regex = "1"
thiserror = "1.0"

[target.'cfg(all(target_os = "linux", any(target_arch = "i686", target_arch = "x86_64", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls", "cookies", "json" ] }

[target.'cfg(all(target_os = "linux", not(any(target_arch = "i686", target_arch = "x86_64", target_arch = "arm", target_arch = "aarch64"))))'.dependencies]
reqwest = { version = "0.11", features = [ "native-tls-vendored", "cookies", "json" ] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.11", features = [ "cookies", "json" ] }
