[package]
name = "tunet-service"
version = "0.7.0"
description = "A service daemon for Tsinghua University campus network."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netstatus = { workspace = true }
tunet-helper = { workspace = true }
tunet-suggest = { workspace = true }
tunet-settings = { workspace = true }
tunet-settings-cli = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
humantime = "2"
enum_dispatch = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-stream = { workspace = true, features = ["time"] }
futures-util = { workspace = true }
notify-rust = "4"

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = { workspace = true }
windows-service = "0.6"
is_elevated = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
plist = "1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = { workspace = true }
