[package]
name = "tunet-service"
version = "0.9.3"
description = "Tsinghua University network service daemon"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netstatus = { workspace = true }
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
humantime = "2"
enum_dispatch = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-stream = { workspace = true, features = ["time"] }
futures-util = { workspace = true }
notify-rust = "4"
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.6"
is_elevated = "0.1"
runas = "1"
winlog2 = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
plist = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
env_logger = "0.11"
