[package]
name = "tunet-settings"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyring = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
rpassword = "7"
cfg-if = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
serde_with = { workspace = true, features = ["base64"] }
