[package]
name = "tunet-settings"
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyring-core = "1"
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
rpassword = "7"
cfg-if = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
serde_with = { workspace = true, features = ["base64"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring-store = { package = "windows-native-keyring-store", version = "1" }

[target.'cfg(target_os = "macos")'.dependencies]
keyring-store = { package = "apple-native-keyring-store", version = "1", features = [
    "keychain",
    "protected",
] }

[target.'cfg(target_os = "ios")'.dependencies]
keyring-store = { package = "apple-native-keyring-store", version = "1", features = [
    "protected",
] }

[target.'cfg(target_os = "android")'.dependencies]
keyring-store = { package = "android-native-keyring-store", version = "1" }
