[package]
name = "tunet-suggest"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tunet-helper = { workspace = true }
netstatus = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
