[package]
name = "tunet-tui"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
tunet-rust = { path = "../tunet-rust", features = [ "netstatus", "serde" ] }
keyring = { path = "../keyring" }
futures-util = "0.3"
tokio = { version = "1.11", features = [ "macros", "rt-multi-thread", "time" ] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
