[package]
name = "tunet"
version = "0.8.1"
description = "A CLI for Tsinghua University campus network."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.deb]
assets = [
    [
        "target/release/tunet",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-cui",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-gui",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-service",
        "usr/bin/",
        "755",
    ],
    [
        "../logo.png",
        "usr/share/icons/hicolor/256x256/apps/tunet.png",
        "644",
    ],
    [
        "tunet.desktop",
        "usr/share/applications/tunet.desktop",
        "755",
    ],
    [
        "../tunet-service/tunet@.service",
        "lib/systemd/system/tunet@.service",
        "644",
    ],
]

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
mac_address = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
console = "0.15"
enum_dispatch = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = { workspace = true }
