[package]
name = "tunet"
version = "0.9.3"
description = "Tsinghua University network CLI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.deb]
assets = [
    [
        "target/release/tunet",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-cui",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-gui",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/tunet-service",
        "usr/bin/",
        "755",
    ],
    [
        "../logo.png",
        "usr/share/icons/hicolor/256x256/apps/tunet.png",
        "644",
    ],
    [
        "tunet.desktop",
        "usr/share/applications/tunet.desktop",
        "755",
    ],
    [
        "../tunet-service/tunet@.service",
        "lib/systemd/system/tunet@.service",
        "644",
    ],
]

[dependencies]
tunet-helper = { workspace = true }
tunet-settings = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
mac_address2 = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
console = "0.15"
enum_dispatch = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[package.metadata.winresource]
OriginalFilename = "tunet.exe"
LegalCopyright = "Copyright © 2021-2023 Berrysoft"
