[package]
name = "native"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
netstatus = { workspace = true }
tunet-helper = { workspace = true, features = ["dart"] }
tunet-model = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
log = { workspace = true }
chrono = { workspace = true }
flutter_rust_bridge = { version = "=2.0.0-dev.28", features = ["chrono"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0.0-dev.25"
