[package]
name = "native"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
netstatus = { workspace = true }
tunet-helper = { workspace = true, features = ["dart"] }
tunet-model = { workspace = true }
anyhow = { workspace = true }
compio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
flutter_rust_bridge = { version = "2.4.0", default-features = false, features = [
    "anyhow",
    "dart-opaque",
    "log",
    "user-utils",
] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.4.0"
