[package]
name = "native"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
netstatus = { workspace = true }
tunet-helper = { workspace = true, features = ["dart"] }
tunet-model = { workspace = true }
anyhow = { workspace = true }
compio = { workspace = true }
futures-util = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
flutter_rust_bridge = { version = "=2.10.0", features = ["chrono"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = "0.21"
rustls-platform-verifier = { workspace = true }

[build-dependencies]
flutter_rust_bridge_codegen = "=2.10.0"
